# receipts-data-extractor

./: .env.example  AZURE_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  startup.sh  test.ipynb  test_continente.py
.github/workflows/: azure-webapps-python.yml  main.yml  main_receipts-data-extractor.yml  test-api.yml
src/: __init__.py
src/api/: main.py
src/extraction/: __init__.py  models.py  pdf_extractor.py  receipt_parser.py
src/receipts_data_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: conftest.py  test_api.py  test_continente.py  test_pdf_extractor.py  test_price.py  test_receipt_parser.py
