[project]
name = "supermarket-receipt-parser"
version = "0.1.0"
description = "FastAPI service for extracting and parsing product information from Portuguese supermarket receipts, with specialized support for Pingo Doce"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11.7",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "ruff>=0.12.11",
]
